--- a/master.ini
+++ b/master.ini
@@ -19,7 +19,7 @@ Number of Retrys = 5
 ;; Number of Retrys if Error Encountered  
 ;;  Note: If doing multiple SQL i.e SQL1_1 SQL2_1 etc, it will retry everything.  
 
-[playerExists]
-SQL1_1 = SELECT pid, name FROM players WHERE pid = ?
+[checkPlayerExists]
+SQL1_1 = SELECT pid FROM players WHERE pid = ?
 SQL1_INPUTS = 1
 OUTPUT = 1-STRING, 2-STRING
