--- a/master.ini
+++ b/master.ini
@@ -23,3 +23,7 @@ Input SQF Parser = false
 SQL1_1 = SELECT pid FROM players WHERE pid = ?
 SQL1_INPUTS = 1
 OUTPUT = 1-STRING, 2-STRING
+
+[insertNewPlayer]
+SQL1_1 = INSERT INTO players (pid) VALUES (?)
+SQL1_INPUTS = 1
