--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,12 +1,7 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-		"label": "build",
-		"type": "shell",
-		"command": "Starter.bat",
-		"presentation": {"echo": true, "reveal": "always", "focus": false, "panel": "shared", "showReuseMessage": false, "clear": true},
-		"group": {"kind": "build", "isDefault": true},
-		}
-	]
+    "label": "build",
+    "type": "shell",
+    "command": "C:/Users\Administrator\Documents\GitHub\Project-Lancelot\Starter.bat",
+    "presentation": {"echo": true, "reveal": "always", "focus": false, "panel": "shared", "showReuseMessage": false, "clear": true},
+    "group": {"kind": "build", "isDefault": true},
 }
